--- a/src/input.css
+++ b/src/input.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  html {
+/* @layer base {
+  h1 {
     font-family: Pacifico, system-ui, sans-serif;
   }
-}
+} */
